bear:
Added code to improve the Cyclic Timeshift mode, it can now handle pauses to the writer or the Source and the current time remains static or increases accordingly.
Added code for the IMediaSeeking::GetAvailable() function.
Added extra Update duration code for use with the MultiFileReader.
Added a FileReader Mode function to indicate if we are using the MultiFileReader.
Added some changes to the Getfilesize function of the MultifileReader.
Fixed a problem with the update duration thread locking the file when stopped. 
Fixed the high cpu usage problem that occurs at 0 file start.
Fixed the problem where the filter would not update the demux from a 0 file start.
Fixed the filtergraph time to position itself relative to the position within the buffer so you can seek within it. This only happens when the buffer stops increasing in size and starts to cycle.
Added a test for the demux pid settings to the update duration thread so that if the pids values change it will force a update on the demux.
Changed the update duration method to parse only the end pcr rather than both start & end.
Fixed a problem with the Update duration when using the TSFileWriter file by adding RefreshTSBufferFile() calls.

nate:
Implemented a ReferenceClock in TSFileSource
Implemented the Audio Renderer Reference Clock selection option. (will not work as default setting)
Added a TSFileSource Reference Clock selection option.
Changed Rate Control to use timeGetTime rather than the IReferenceClock.
Fixed a problem from 2.1.1.7 where registry defaults weren't loaded properly.

Version 2.1.1.7
=================
Added TSFileSink (multi file transport stream writer)
Added MultiFileReader for .tsbuffer files (duration updates don't work yet)

Version 2.1.1.6
=================
Fixed a problem in the parser code that was causing false detection of A/V pids when in program Pin Mode.