@@ -46,7 +46,7 @@ Demux::Demux(PidParser *pPidParser, IBaseFilter *pFilter) :
 	m_bConnectBusyFlag(false),
 	m_WasPlaying(FALSE),
 	m_WasPaused(FALSE),
-	m_bAC3Mode(TRUE),
+	m_bAC3Mode(FALSE),//(TRUE),
 	m_StreamH264(FALSE),
 	m_StreamMpeg4(FALSE),
 	m_StreamVid(FALSE),
@@ -54,7 +54,7 @@ Demux::Demux(PidParser *pPidParser, IBaseFilter *pFilter) :
 	m_StreamMP2(FALSE),
 	m_StreamAud2(FALSE),
 	m_StreamAAC(FALSE),
-	m_ClockMode(0),
+	m_ClockMode(1),
 	m_SelTelexPid(0),
 	m_SelAudioPid(0), 
 	m_SelVideoPid(0),
