@@ -1,9 +1,14 @@
 bear:
+Changed the default clock reference option to select the TSFileSource Internal clock.
+Changed the AC3 Preference Option Default setting to disabled so that UK users don't loose audio if a private stream is detected as AC3 and is chosen.
+Fixed a bug with the Program Pin Mode where it was not updating the duration.
+
 Added code to improve the Cyclic Timeshift mode, it can now handle pauses to the writer or the Source and the current time remains static or increases accordingly.
 Added code for the IMediaSeeking::GetAvailable() function.
 Added extra Update duration code for use with the MultiFileReader.
 Added a FileReader Mode function to indicate if we are using the MultiFileReader.
 Added some changes to the Getfilesize function of the MultifileReader.
+
 Fixed a problem with the update duration thread locking the file when stopped. 
 Fixed the high cpu usage problem that occurs at 0 file start.
 Fixed the problem where the filter would not update the demux from a 0 file start.
